--- a/Schemas/schemasCompil.tex
+++ b/Schemas/schemasCompil.tex
@@ -10,16 +10,17 @@
 
 \usepackage{color}
 \definecolor{lightgray}{rgb}{.9,.9,.9}
-\definecolor{darkgray}{rgb}{.4,.4,.4}
+\definecolor{darkgray}{rgb}{.3,.2,.2}
 \definecolor{purple}{rgb}{0.65, 0.12, 0.82}
+\definecolor{brown}{RGB}{140, 0, 0}
 
 \lstnewenvironment{OCaml}
                   {\lstset{
                       language=[Objective]Caml,
                       breaklines=true,
                       showstringspaces=false,
-                      commentstyle=\color{purple},
-                      stringstyle=\color{red},
+                      commentstyle=\color{red},
+                      stringstyle=\color{darkgray},
                       identifierstyle=\ttfamily,
                       keywordstyle=\color{blue},
                       basicstyle=\footnotesize,
@@ -179,93 +180,109 @@ $[\![ decl^* ]\!]_package:=qname$
 \textbf{class}
 \newline
 \noindent
-$[\![ class\ {\color{blue}qname}\ ]\!]_package$$\longrightarrow$
+$[\![ class\ {\color{blue}name}\ ]\!]_{package,extends}$$\longrightarrow$
 % 1 type objet t 
 % 1 classe encapsulante W de type t
 % 1 a n classes (Ci), sous-classes de W (1 par constructeur)
 % 1 fonction instanceof pr ce type
 % 1 fonction de cast pour ce type
 \begin{OCaml}
-(* type jni.obj t *)
-"type _jni_j"^qname^" = Jni.obj;;"
-(* classe encapsulante *)
-"class type j"^qname^" ="
-(* herite top car extends = "" *)
- " object inherit "^extends^" method _get_jni_j"^qname^" : _jni_j"^qname^"
-  end;;"
-(* upcast jni *)
-"let __jni_obj_of_jni_j"^qname^" (java_obj : _jni_j"^qname^") =
-  (Obj.magic : _jni_j"^qname^" -> Jni.obj) java_obj;;"
-(* downcast jni *)
-"let __jni_j"^qname^"_of_jni_obj =
-  let clazz =
-    try Jni.find_class \""^package^"/"^qname^"\"
-    with | _ -> failwith "Class not found : "^package^"."^qname^"."
-  in
-    fun (java_obj : Jni.obj) ->
-      if not (Jni.is_instance_of java_obj clazz)
-      then failwith \"cast error\" : j"^qname^" ("^package^"/"^qname^")
-      else (Obj.magic java_obj : _jni_j"^qname^");;"
+(** type jni.obj t *)
+"type _jni_j"^name^" = Jni.obj;;"
+(** classe encapsulante *)
+"class type j"^name^" ="
+(** herite top car extends = "" *)
+   "object inherit "^extends^" method _get_jni_j"^name^" : _jni_j"^name^"
+   end;;"
+(** upcast jni *)
+"let __jni_obj_of_jni_j"^name^" (java_obj : _jni_j"^name^") =
+   (Obj.magic : _jni_j"^name^" -> Jni.obj) java_obj;;"
+(** downcast jni *)
+"let __jni_j"^name^"_of_jni_obj =
+   let clazz =
+      try Jni.find_class \""^package^"/"^name^"\"
+   with | _ -> failwith "Class not found : "^package^"."^name^"."
+   in
+      fun (java_obj : Jni.obj) ->
+        if not (Jni.is_instance_of java_obj clazz)
+        then failwith \"cast error\" : j"^name^" ("^package^"/"^name^")
+        else (Obj.magic java_obj : _jni_j"^name^");;"
 (* allocation *)
-"let _alloc_j"^qname^" =
-  let clazz = Jni.find_class "^package^"/"^qname^"
-  in fun () -> (Jni.alloc_object clazz : _jni_j"^qname^");;"
+"let _alloc_j"^name^" =
+    let clazz = Jni.find_class "^package^"/"^name^"
+    in fun () -> (Jni.alloc_object clazz : _jni_j"^name^");;"
 (* capsule *)
-"class _capsule_j"^qname^" =
-  let clazz = Jni.find_class \""^package^"/"^qname^"\"
-  in
-    fun (jni_ref : _jni_j"^qname^") ->
-      let _ =
-        if Jni.is_null jni_ref
-        then raise (JniHierarchy.Null_object \""^package^"/"^qname^"\")
-        else ()
-      in
-        object (self)
-          method _get_jni_j"^qname^" = jni_ref
-          inherit JniHierarchy.top jni_ref
-        end;;"
+"class _capsule_j"^name^" =
+   let clazz = Jni.find_class \""^package^"/"^name^"\"
+   in 
+\end{OCaml}
+\ \ \ \ \ \ \ $_{capsule\_verif}[\![{\color{blue}extends} ]\!]_{package,classname:=name}$
+\begin{OCaml}
+      "fun (jni_ref : _jni_j"^name^") ->
+        let _ =
+          if Jni.is_null jni_ref
+          then raise (JniHierarchy.Null_object \""^package^"/"^name^"\")
+          else ()
+        in
+          object (self)
+            method _get_jni_j"^name^" = jni_ref"
+\end{OCaml}
+\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ $_{capsule\_get}[\![{\color{blue}extends} ]\!]_{package,classname:=name}$
+\begin{OCaml}
+            "inherit JniHierarchy.top jni_ref
+          end;;"
 (* downcast utilisateur *)
-"let j"^qname^"_of_top (o : JniHierarchy.top) : j"^qname^" =
-  new _capsule_j"^qname^" (__jni_j"^qname^"_of_jni_obj o#_get_jniobj);;"
+"let j"^name^"_of_top (o : JniHierarchy.top) : j"^name^" =
+    new _capsule_j"^name^" (__jni_j"^name^"_of_jni_obj o#_get_jniobj);;"
 (* instance_of *)
-let _instance_of_j"^qname^" =
- "let clazz = Jni.find_class \""^package^"/"^qname^"\"
-  in fun (o : JniHierarchy.top) -> Jni.is_instance_of o#_get_jniobj clazz;;"
+let _instance_of_j"^name^" =
+   "let clazz = Jni.find_class \""^package^"/"^name^"\"
+    in fun (o : JniHierarchy.top) -> Jni.is_instance_of o#_get_jniobj clazz;;"
 (* tableaux *)
-"let _new_jArray_j"^qname^" size =
-  let java_obj = Jni.new_object_array size (Jni.find_class \""^package^"/"^qname^"\")
-  in
-    new JniArray._Array Jni.get_object_array_element Jni.
-      set_object_array_element (fun jniobj -> new _capsule_j"^qname^" jniobj)
-      (fun obj -> obj#_get_jni_j"^qname^") java_obj;;"
-"let jArray_init_j"^qname^" size f =
-  let a = _new_jArray_j"^qname^" size
-  in (for i = 0 to pred size do a#set i (f i) done; a);;"
+"let _new_jArray_j"^name^" size =
+    let java_obj = Jni.new_object_array size (Jni.find_class \""^package^"/"^name^"\")
+    in
+      new JniArray._Array Jni.get_object_array_element Jni.
+        set_object_array_element (fun jniobj -> new _capsule_j"^name^" jniobj)
+        (fun obj -> obj#_get_jni_j"^name^") java_obj;;"
+"let jArray_init_j"^name^" size f =
+    let a = _new_jArray_j"^name^" size
+    in (for i = 0 to pred size do a#set i (f i) done; a);;"
+\end{OCaml}
+
+\ 
+\newline
+
+\textbf{extends}
+\newline
+\noindent
+$_{capsule\_get}[\![ {\color{blue}extends} ]\!]$$\longrightarrow$
+% verification extends
+\begin{OCaml}
+   "method _get_jni_j"^extends^" = jni_ref"
 \end{OCaml}
 
 \noindent
-$[\![{\color{blue}class}\  name\ {\color{blue}extends}\ qname ]\!]$$\longrightarrow$
-%  
- object inherit JniHierarchy.top method _get_jni_jPoint : _jni_jPoint
- end;;
-
-
-let capsule ...
-   let _ =
-      if not (Jni.is_assignable_from clazz (Jni.find_class "mypack/P"))
+$_{capsule\_verif}[\![ {\color{blue}extends} ]\!]$$\longrightarrow$
+% verification extends
+\begin{OCaml}
+   "let _ =
+      if not (Jni.is_assignable_from clazz (Jni.find_class \""^package^"/"^extends^"\"))
       then
         failwith
-          "Wrong super class in IDL : mypack.Point not extends
-        mypack.P."       
+          \"Wrong super class in IDL : "^package^"/"^classname^" not extends
+        "^package^"/"^extends^".\"
       else ()
-    in
-...
-   method _get_jni_jP = jni_ref
-             inherit JniHierarchy.top jni_ref
+    in"
+\end{OCaml}
 
+\ 
+\newline
 
+\textbf{extends}
+\newline
 \noindent
-$[\![{\color{blue}class}\  name\ {\color{blue}extends}\ qname ]\!]$$\longrightarrow$
+$[\![{\color{blue}class}\  name\ {\color{blue}extends} ]\!]$$\longrightarrow$
 % 
 
 \noindent
